<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:id="@+id/main_view_user_fragment"
    tools:context=".Fragments.UserFragment">

    <Button
        android:id="@+id/btn_find_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_user_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:inputType="number"
        android:hint="@string/user_id_hint_txt"
        app:layout_constraintEnd_toStartOf="@+id/btn_find_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--<androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_users"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />-->

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/label_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        app:layout_constraintBottom_toBottomOf="@+id/input_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/input_id"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/input_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="@+id/input_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/input_name"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/input_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_id" />

    <TextView
        android:id="@+id/label_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        app:layout_constraintBottom_toBottomOf="@+id/input_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/input_username"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/input_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_name" />

    <TextView
        android:id="@+id/label_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintBottom_toBottomOf="@+id/input_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_username"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/input_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/input_username" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_find_user" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:barrierDirection="right"
        app:constraint_referenced_ids="label_name,label_username,label_email" />

    <Button
        android:id="@+id/btn_get_posts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_posts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email"
        android:layout_marginTop="12dp"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="label_email, label_username,label_name,input_email,input_name,input_username,btn_get_posts,label_id,input_id"/>

</androidx.constraintlayout.widget.ConstraintLayout>