<resources>
    <string name="app_name">LearningRxJava</string>
    <string name="get_posts">Get Posts</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_user">Find User</string>
    <string name="user_id_hint_txt">Enter user ID (1-10)</string>
    <string name="id">ID: </string>
    <string name="name">Name: </string>
    <string name="username">Username: </string>
    <string name="email">Email: </string>
    <string name="empty_input_error">User Id can\'t be empty</string>
    <string name="invalid_input_error">User Id must be between 1 and 10</string>
    <string name="no_results_found">No Results Found!</string>

</resources>